--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
 name = nm_lib
 provides = nm_lib
-version = 0
+version = 0.1.0
 description = A library for the mumerical method course
-long_description = file: README.rst
+long_description = file: README.md
 long_description_content_type = text/x-rst
 author = Juan Martinez-Sykora
 author_email = martinezsykora@baeri.org
 license = BSD 2-Clause
-license_file = LICENSE.rst
+license_file = LICENSE
 url = https://github.com/jumasy/AST5110
 platform = any
 keywords = solar physics, numerical methods
