[FIX] typos and remove commented line

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 min_version = 4.0
 envlist =
-    py{310,310,312}{,-online}
+    py{310,311,312}
     build_doc
     codestyle
 requires =
@@ -16,17 +16,13 @@ description =
     online: that require remote data (as well as the offline ones)
 setenv =
     MUSE_TEST_PATH = {toxinidir}/nm_lib/
-    PYTEST_COMMAND = pytest -vvv -r a --pyargs nm_lib --cov-report=xml --cov=nm_lib {toxinidir}/docs
+    PYTEST_COMMAND = pytest -vvv -r a --pyargs nm_lib --cov-report=xml --cov=nm_lib
 deps =
-    online: pytest-rerunfailures
-    online: pytest-timeout
-    torch
 extras =
     tests
 commands =
     pip freeze --all --no-input
-    !online: {env:PYTEST_COMMAND} {posargs}
-    online: {env:PYTEST_COMMAND} --reruns 2 --reruns-delay 30 --timeout=180 --remote-data=any {posargs}
+    {env:PYTEST_COMMAND} {posargs}
 
 [testenv:build_docs]
 changedir = docs
