--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,22 +7,44 @@ on:
   workflow_dispatch:
 
 jobs:
+  deploy-exercise:
+      runs-on: ubuntu-latest
+      steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"
+
+      - name: Install dependencies
+        run: |
+          pip install tox
+
+      - name: Run tox
+        run: |
+          tox -e codestyle
+
   deploy-book:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up Python 3.10
+    - name: Set up Python 3.12
       uses: actions/setup-python@v4
       with:
-        python-version: "3.10"
+        python-version: "3.12"
 
     - name: Install dependencies
       run: |
         pip install -e .
         pip install pytest
+        pip install tox
 
+    - name: Run tox
+      run: |
+        tox -e py312
 
-    - name: Run
+    - name: Run pytest ex2
       run: |
         pytest -vvv ./nm_lib/test/test_ex_2b.py
