--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: main
 on:
   push:
     branches:
-    - main
+    - master
   pull_request:
   workflow_dispatch:
 
@@ -43,7 +43,7 @@ jobs:
 
     - name: Run tox
       run: |
-        tox -e py312
+        tox -e py312=
 
     - name: Run pytest ex2
       run: |
