--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  deploy-exercise:
+  deploy-codestyle:
       runs-on: ubuntu-latest
       steps:
       - uses: actions/checkout@v2
@@ -25,7 +25,7 @@ jobs:
         run: |
           tox -e codestyle
 
-  deploy-book:
+  deploy-ex2-tests:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
